# abcd

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  common_definitions.mk  install_dependencies.sh
a7585du/: a7585du.py
abad2/: Makefile  abad2.cpp  config.json
abcd/: CMakeLists.txt  Makefile  abcd.cpp  config.json
abcd/cmake/: FindCAEN.cmake
abcd/configs/: DT5720_DPP-PSD_NaI.json  DT5720_STD_HPGe.json  DT5725_DPP-PSD_MST.json  DT5725_STD_NaI_NaI.json  DT5730_DPP-PSD_Ch1_YAP_Ch4_DePangher_Ch6_BuncherPulse_Ch7_PickUp_YAP_triggers_BuncherPulse.json  DT5730_DPP-PSD_Ch1_YAP_Ch4_DePangher_Ch6_BuncherPulse_Ch7_PickUp_coincidences_YAP_validates_BuncherPulse.json  DT5730_DPP-PSD_Ch2_triggered_by_Ch4.json  DT5730_DPP-PSD_LaBr_CeBr_CeBr.json  DT5730_DPP-PSD_LaBr_CeBr_CeBr_COINC.json  DT5730_DPP-PSD_LastCouple_triggered_by_other_couples.json  DT5730_DPP-PSD_NaI.json  DT5751_DPP-PSD_EJ228.json  DT5790_DPP-PSD_ZnS.json  V1720_DPP-PSD_EJ301.json  V1730_0097_DPP-PSD_C-BORD-NO-COIN.json  V1730_0097_DPP-PSD_C-BORD.json  V1730_0228_DPP-PSD_C-BORD-NO-COIN.json  V1730_0228_DPP-PSD_C-BORD.json  V1730_DPP-PSD_C-BORD_LNL_container_test.json  V1730_DPP-PSD_Coincidence_Couple_0.json  V1730_DPP-PSD_EJ228_Coincidence.json  V1730_NCBJ.json
abcd/deb/: preinst
abcd/include/: actions.hpp  class_caen_dgtz.h  typedefs.hpp
abcd/src/: actions.cpp  class_caen_dgtz.cpp  states.cpp
abps5000a/: Makefile  abps5000a.cpp  config_README.json
abrp/: Makefile  abrp.cpp  config.json  configure_red_pitaya.sh
absp/: .gitignore  CMakeLists.txt  Makefile  absp.cpp  display_digitizers.lua  specific_commands.sh  timestamp_sync.lua
absp/configs/: ADQ14-FWDAQ.json  ADQ14-FWPD.json  ADQ14-FWSTD_SPD-06845_Test_Ch0_Pulser_Ch1_LaBr.json  ADQ214.json  ADQ214_long_counters.json  ADQ214_segmented_fission_chamber.json  ADQ36-FWDAQ.json  ADQ412_SPD-00858_ADQ412_SPD-00864.json  config.json  verdi.json  verdini.json
absp/include/: ADQ14_FWDAQ.hpp  ADQ14_FWPD.hpp  ADQ14_FWSTD.hpp  ADQ214.hpp  ADQ36_FWDAQ.hpp  ADQ412.hpp  ADQAPI.i  ADQ_descriptions.hpp  ADQ_utilities.hpp  Digitizer.hpp  Digitizers.i  LuaManager.hpp  actions.hpp  states.hpp  streaming_header.h  typedefs.hpp
absp/scripts/: ADQ14_timestamp_sync.lua  ADQ214_timestamp_sync.lua  VERDI_timestamp_sync.lua  display_digitizers.lua  specific_commands.sh  timestamp_sync.lua
absp/src/: ADQ14_FWDAQ.cpp  ADQ14_FWPD.cpp  ADQ14_FWSTD.cpp  ADQ214.cpp  ADQ36_FWDAQ.cpp  ADQ412.cpp  ADQAPI.i  ADQ_descriptions.cpp  Digitizers.i  actions.cpp  states.cpp
ade_tools/: CMakeLists.txt  plot_PSD.py  plot_ToF.py  plot_spectra.py  plot_timestamps.py  split_ade.py
background_estimate/: Makefile  (+1 more)
califo/: CMakeLists.txt  Makefile  califo.cpp  test.c
califo/configs/: config.json
califo/include/: actions.hpp  fit_functions.h  states.hpp  typedefs.hpp
califo/src/: actions.cpp  background.cpp  states.cpp
chafi/: CMakeLists.txt  Makefile  chafi.c
compression/: CMakeLists.txt  gzad.c  unzad.c
convert/: CMakeLists.txt  Makefile  README.md  ade2ascii.c  ade2ascii.m  ade2ascii.py  adr2ade.c  adr2adeadw.py  adr2configs.py  adr2events.py  adw2ascii.c  defaults.h  events.h
events_counter/: CMakeLists.txt  events_counter.cpp
filters/: CMakeLists.txt  chafi.c  cofi.c  enfi.c  pufi.c  sofi.c
filters/configs/: polygon.json  polygons.json
replay/: CMakeLists.txt  Makefile  README.md  replay_events.c  replay_raw.c  replay_raw.py
spec/: CMakeLists.txt  Makefile  config.json  new_config.json  spec.cpp  spec_startup_example.sh
spec/include/: actions.hpp  states.hpp  typedefs.hpp
spec/public/: index.html
spec/public/js/: commands.js  events.js  main.js  plots.js
spec/src/: actions.cpp  states.cpp
tofcalc/: CMakeLists.txt  Makefile  config.json  tofcalc.cpp  tofcalc_startup_example.sh
tofcalc/configs/: AD2_SiPM_LYSO.json  DT5730_LaBr_CeBr.json  RedPitaya_CeBr.json  SPD214_BGO_LaCl.json  config_JRC.json  config_RedPitaya.json  config_example_data.json  config_sim.json
tofcalc/include/: actions.hpp  states.hpp  typedefs.hpp
tofcalc/public/: index.html
tofcalc/public/js/: commands.js  main.js  plots.js  statuses.js
tofcalc/src/: actions.cpp  states.cpp
waan/: CMakeLists.txt  Makefile  README.md  config.json  send_configuration.py  waan.cpp
waan/configs/: config_ADQ14-FWSTD_SPD-06845_Test_Ch0_Pulser_Ch1_LaBr.json  config_Ch0_LaBr_Ch1_NIM_Ch2_NIM.json  config_Ch0_SiDet_StpAvg.json  config_Ch1_LaBr_CFD_PSD_Ch6_HPGe_TFACFD_TPZ.json  config_Ch1_LaBr_Ch6_HPGe_TPZ.json  config_Ch1_LaBr_Ch6_HPGe_TPZ_Ch8_HPGe_CRRC4.json  config_Ch6_LaBr_Ch7_HPGe.json  config_Ch6_LaBr_Ch7_HPGeTrapz.json  config_RedPitaya_CeBr.json  config_example_data.json  config_libLogistic.json  reference_waveforms.json
waan/include/: DSP_functions.h  actions.hpp  analysis_functions.h  states.hpp  typedefs.hpp
waan/libraries/: CMakeLists.txt  Makefile.in  abcd.conf.in
waan/libraries/include/: DSP_functions.h
waan/libraries/src/: libCFD.c  libCRRC4.c  libGeP.c  libGrid.c  libLE.c  libLeftThr.c  libLeftThrPeriodic.c  libLogDecay.c  libLogistic.c  libMultiLeftThr.c  libMultiPSD.c  libPSD.c  libPSD_averaging.c  libPSD_downsample.c  libRC4.c  libRT.c  libRunningMean.c  libSimplePSD.c  libStpAvg.c  libTFACFD.c  libTPZ.c
waan/src/: actions.cpp  libCFD.c  libCRRC4.c  libGeP.c  libGrid.c  libLE.c  libLeftThr.c  libLeftThrPeriodic.c  libLogistic.c  libNull.c  libPSD.c  libPSD_averaging.c  libRC4.c  libRT.c  libRunningMean.c  libSimplePSD.c  libStpAvg.c  libTFACFD.c  libTPZ.c  states.cpp
wadi/: CMakeLists.txt  Makefile  config.json  wadi  wadi.c
wadi/public/: index.html
wadi/public/js/: main.js  plots.js  statuses.js
wit/: CMakeLists.txt  README.md  app.js  config.json  config_coincidences.json  package-lock.json  package.json  wit.sh.in
wit/patches/: fmin+0.0.4.patch
wit/public/javascripts/: abcd.js  dasa.js  fitting.js  spec.js  tofcalc.js  utilities.js  waan.js  wadi.js
wit/public/stylesheets/: style.css  style.less
wit/routes/: index.js  module.js
wit/views/: abcd.pug  dasa.pug  index.pug  layout.pug  module.pug  scripts.pug  spec.pug  tofcalc.pug  waan.pug  wadi.pug
(+206 files in other folders)
